--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -66,7 +66,7 @@ a {
 body {
     color: #6A696C;
     font-size:15px;
-    background: #f5f4f2;
+    background: #e8e7e6;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -145,6 +145,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .sidebar {
     background: #e8e7e6;
+}
+
+.site-main {
+    background: #f5f4f2;
 }
 
 .last-posts time {
